data/derived/sp14/progs/unify/prog3322.ml.out
Characters 78-90:
  | Sine x -> "sin(pi*%s)" x
              ^^^^^^^^^^^^
Error: This expression has type string
       This is not a function; it cannot be applied.
